show san pham trang index

--- a/karl-shop/src/app/components/home/home.component.html
+++ b/karl-shop/src/app/components/home/home.component.html
@@ -167,112 +167,101 @@
         <div class="row karl-new-arrivals">
 
             <!-- Single gallery Item Start -->
-            <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
+            <div *ngFor="let pro of _productArray" class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
                 <!-- Product Image -->
                 <div class="product-img">
-                    <img src="../assets/images/product-img/product-1.jpg" alt="">
+                    <img src="{{pro.hinh}}" alt="">
                     <div class="product-quicview">
                         <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
                     </div>
                 </div>
                 <!-- Product Description -->
                 <div class="product-description">
-                    <h4 class="product-price">$39.90</h4>
-                    <p>Adidas Cloudfoam X5</p>
+                    <h4 class="product-price">{{pro.donGia}}</h4>
+                    <p>{{pro.tenSanPham}}</p>
                     <!-- Add to Cart -->
                     <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
                 </div>
             </div>
 
-            <!-- Single gallery Item Start -->
-            <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.3s">
-                <!-- Product Image -->
+            
+            <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.3s">
+               
                 <div class="product-img">
                     <img src="../assets/images/product-img/product-2.jpg" alt="">
                     <div class="product-quicview">
                         <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
                     </div>
                 </div>
-                <!-- Product Description -->
+                
                 <div class="product-description">
                     <h4 class="product-price">$39.90</h4>
                     <p>Adidas Cloudfoam X5</p>
-                    <!-- Add to Cart -->
+                   
                     <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- Single gallery Item Start -->
-            <div class="col-12 col-sm-6 col-md-4 single_gallery_item access wow fadeInUpBig" data-wow-delay="0.4s">
-                <!-- Product Image -->
+            
+            <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item access wow fadeInUpBig" data-wow-delay="0.4s">
+               
                 <div class="product-img">
                     <img src="../assets/images/product-img/product-3.jpg" alt="">
                     <div class="product-quicview">
                         <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
                     </div>
                 </div>
-                <!-- Product Description -->
+                
                 <div class="product-description">
                     <h4 class="product-price">$39.90</h4>
                     <p>Adidas Cloudfoam X5</p>
-                    <!-- Add to Cart -->
+                    
                     <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- Single gallery Item Start -->
-            <div class="col-12 col-sm-6 col-md-4 single_gallery_item shoes wow fadeInUpBig" data-wow-delay="0.5s">
-                <!-- Product Image -->
+            <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item shoes wow fadeInUpBig" data-wow-delay="0.5s">
                 <div class="product-img">
                     <img src="../assets/images/product-img/product-4.jpg" alt="">
                     <div class="product-quicview">
                         <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
                     </div>
                 </div>
-                <!-- Product Description -->
                 <div class="product-description">
                     <h4 class="product-price">$39.90</h4>
                     <p>Adidas Cloudfoam X5</p>
-                    <!-- Add to Cart -->
                     <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- Single gallery Item Start -->
-            <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.6s">
-                <!-- Product Image -->
+            <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.6s">
                 <div class="product-img">
                     <img src="../assets/images/product-img/product-5.jpg" alt="">
                     <div class="product-quicview">
                         <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
                     </div>
                 </div>
-                <!-- Product Description -->
                 <div class="product-description">
                     <h4 class="product-price">$39.90</h4>
                     <p>Adidas Cloudfoam X5</p>
-                    <!-- Add to Cart -->
                     <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- Single gallery Item -->
-            <div class="col-12 col-sm-6 col-md-4 single_gallery_item kids man wow fadeInUpBig" data-wow-delay="0.7s">
-                <!-- Product Image -->
+            <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item kids man wow fadeInUpBig" data-wow-delay="0.7s">
                 <div class="product-img">
                     <img src="../assets/images/product-img/product-6.jpg" alt="">
                     <div class="product-quicview">
                         <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
                     </div>
                 </div>
-                <!-- Product Description -->
                 <div class="product-description">
                     <h4 class="product-price">$39.90</h4>
                     <p>Adidas Cloudfoam X5</p>
-                    <!-- Add to Cart -->
                     <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
                 </div>
-            </div>
+            </div> -->
+
         </div>
     </div>
 </section>
