--- a/karl-shop/src/app/components/header/header.component.html
+++ b/karl-shop/src/app/components/header/header.component.html
@@ -131,7 +131,22 @@
                   <li class="nav-item active">
                     <a class="nav-link" routerLink="/home">Trang Chủ</a>
                   </li>
-                  <li class="nav-item dropdown">
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/products">Sản Phẩm</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/cart">Giỏ Hàng</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/checkout">Thanh Toán</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">Chi Tiết</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Liên Hệ</a>
+                  </li>
+                  <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="karlDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                       aria-expanded="false">Pages</a>
                     <div class="dropdown-menu" aria-labelledby="karlDropdown">
@@ -141,17 +156,7 @@
                       <a class="dropdown-item" routerLink="/cart">Giỏ Hàng</a>
                       <a class="dropdown-item" routerLink="/checkout">Thanh Toán</a>
                     </div>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Giày Tập Luyện</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">
-                      <span class="karl-level">hot</span> Giày Chạy Bộ</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Liên Hệ</a>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </nav>
