--- a/karl-shop/src/app/components/footer/footer.component.html
+++ b/karl-shop/src/app/components/footer/footer.component.html
@@ -17,7 +17,7 @@
 
               </script> All rights reserved | This template is made with
               <i class="fa fa-heart-o" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib</a>
+              <a routerLink="/home" target="_blank">Shoes Shop</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
