--- a/karl-shop/src/app/components/home/home.component.html
+++ b/karl-shop/src/app/components/home/home.component.html
@@ -101,7 +101,7 @@
                     <span>$130</span>
                   </h5>
                   <p>{{detailArray.chiTiet}}</p>
-                  <a href="#">Xem chi tiết</a>
+                  <a>Xem chi tiết</a>
                 </div>
                 <!-- Add to Cart Form -->
                 <form class="cart" method="post">
@@ -175,16 +175,14 @@
       <button class="btn active" data-filter="*">Tất Cả</button>
       <span class="" *ngFor="let loaigiay of _loaiGiayArray">
         <button class="btn" data-filter="">{{loaigiay.tenLoai}}</button>
-    </span>
+      </span>
     </div>
   </div>
 
+  <!-- Adidas Products -->
   <div class="container">
     <div class="row karl-new-arrivals">
-
-      <!-- Single gallery Item Start -->
-      <div *ngFor="let pro of _productArray" class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
-        <!-- Product Image -->
+      <div *ngFor="let pro of _adidasArray" class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
         <div class="product-img" (click)="getDetailModal(pro)">
           <img src="{{pro.hinh}}" alt="">
           <div class="product-quicview">
@@ -193,94 +191,55 @@
             </a>
           </div>
         </div>
-        <!-- Product Description -->
         <div class="product-description">
           <h4 class="product-price">{{pro.donGia | currency:'VNĐ' : 'code':'1.0'}}</h4>
           <p [routerLink]="['/detail', pro.id]">{{pro.tenSanPham}}</p>
-          <!-- Add to Cart -->
           <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
         </div>
       </div>
-
-
-      <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.3s">
-               
-                <div class="product-img">
-                    <img src="../assets/images/product-img/product-2.jpg" alt="">
-                    <div class="product-quicview">
-                        <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
-                    </div>
-                </div>
-                
-                <div class="product-description">
-                    <h4 class="product-price">$39.90</h4>
-                    <p>Adidas Cloudfoam X5</p>
-                   
-                    <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
-                </div>
-            </div> -->
-
-
-      <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item access wow fadeInUpBig" data-wow-delay="0.4s">
-               
-                <div class="product-img">
-                    <img src="../assets/images/product-img/product-3.jpg" alt="">
-                    <div class="product-quicview">
-                        <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
-                    </div>
-                </div>
-                
-                <div class="product-description">
-                    <h4 class="product-price">$39.90</h4>
-                    <p>Adidas Cloudfoam X5</p>
-                    
-                    <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
-                </div>
-            </div> -->
-
-      <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item shoes wow fadeInUpBig" data-wow-delay="0.5s">
-                <div class="product-img">
-                    <img src="../assets/images/product-img/product-4.jpg" alt="">
-                    <div class="product-quicview">
-                        <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
-                    </div>
-                </div>
-                <div class="product-description">
-                    <h4 class="product-price">$39.90</h4>
-                    <p>Adidas Cloudfoam X5</p>
-                    <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
-                </div>
-            </div> -->
-
-      <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.6s">
-                <div class="product-img">
-                    <img src="../assets/images/product-img/product-5.jpg" alt="">
-                    <div class="product-quicview">
-                        <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
-                    </div>
-                </div>
-                <div class="product-description">
-                    <h4 class="product-price">$39.90</h4>
-                    <p>Adidas Cloudfoam X5</p>
-                    <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
-                </div>
-            </div> -->
-
-      <!-- <div class="col-12 col-sm-6 col-md-4 single_gallery_item kids man wow fadeInUpBig" data-wow-delay="0.7s">
-                <div class="product-img">
-                    <img src="../assets/images/product-img/product-6.jpg" alt="">
-                    <div class="product-quicview">
-                        <a href="#" data-toggle="modal" data-target="#quickview"><i class="ti-plus"></i></a>
-                    </div>
-                </div>
-                <div class="product-description">
-                    <h4 class="product-price">$39.90</h4>
-                    <p>Adidas Cloudfoam X5</p>
-                    <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
-                </div>
-            </div> -->
-
     </div>
+    <!-- Adidas Products -->
+    
+    <!-- Nike Products -->
+    <!-- <div class="row karl-new-arrivals">
+      <div *ngFor="let pro of _nikeArray" class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
+        <div class="product-img" (click)="getDetailModal(pro)">
+          <img src="{{pro.hinh}}" alt="">
+          <div class="product-quicview">
+            <a href="#" data-toggle="modal" data-target="#quickview">
+              <i class="ti-plus"></i>
+            </a>
+          </div>
+        </div>
+        <div class="product-description">
+          <h4 class="product-price">{{pro.donGia | currency:'VNĐ' : 'code':'1.0'}}</h4>
+          <p [routerLink]="['/detail', pro.id]">{{pro.tenSanPham}}</p>
+          <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
+        </div>
+      </div>
+    </div> -->
+    <!-- Nike Products -->
+
+    <!-- NB Products -->
+    <!-- <div class="row karl-new-arrivals">
+      <div *ngFor="let pro of _nbArray" class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
+        <div class="product-img" (click)="getDetailModal(pro)">
+          <img src="{{pro.hinh}}" alt="">
+          <div class="product-quicview">
+            <a href="#" data-toggle="modal" data-target="#quickview">
+              <i class="ti-plus"></i>
+            </a>
+          </div>
+        </div>
+        <div class="product-description">
+          <h4 class="product-price">{{pro.donGia | currency:'VNĐ' : 'code':'1.0'}}</h4>
+          <p [routerLink]="['/detail', pro.id]">{{pro.tenSanPham}}</p>
+          <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
+        </div>
+      </div>
+    </div> -->
+    <!-- NB Products -->
+
   </div>
 </section>
 <!-- ****** New Arrivals Area End ****** -->
