--- a/karl-shop/src/app/components/home/home.component.html
+++ b/karl-shop/src/app/components/home/home.component.html
@@ -101,7 +101,7 @@
                     <span>$130</span>
                   </h5>
                   <p>{{_detailArray.chiTiet}}</p>
-                  <a>Xem chi tiết</a>
+                  <a [routerLink]="['/detail', _detailArray.id]">Xem chi tiết</a>
                 </div>
                 <!-- Add to Cart Form -->
                 <form class="cart" method="post">
@@ -194,7 +194,7 @@
         <div class="product-description">
           <h4 class="product-price">{{pro.donGia | currency:'VNĐ' : 'code':'1.0'}}</h4>
           <p [routerLink]="['/detail', pro.id]">{{pro.tenSanPham}}</p>
-          <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
+          <a class="add-to-cart-btn">Thêm vào giỏ hàng</a>
         </div>
       </div>
     </div>
