--- a/karl-shop/src/app/components/product-detail/product-detail.component.html
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.html
@@ -236,7 +236,7 @@
 </div>
 <!-- ****** Quick View Modal Area End ****** -->
 
-<section class="you_may_like_area clearfix">
+<!-- <section class="you_may_like_area clearfix">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -249,9 +249,7 @@
       <div class="col-12">
         <div class="you_make_like_slider owl-carousel">
 
-          <!-- Single gallery Item -->
           <div class="single_gallery_item">
-            <!-- Product Image -->
             <div class="product-img">
               <img src="../assets/images/product-img/product-1.jpg" alt="">
               <div class="product-quicview">
@@ -260,18 +258,14 @@
                 </a>
               </div>
             </div>
-            <!-- Product Description -->
             <div class="product-description">
               <h4 class="product-price">$39.90</h4>
               <p>Jeans midi cocktail dress</p>
-              <!-- Add to Cart -->
               <a href="#" class="add-to-cart-btn">ADD TO CART</a>
             </div>
           </div>
 
-          <!-- Single gallery Item -->
           <div class="single_gallery_item">
-            <!-- Product Image -->
             <div class="product-img">
               <img src="../assets/images/product-img/product-2.jpg" alt="">
               <div class="product-quicview">
@@ -280,18 +274,14 @@
                 </a>
               </div>
             </div>
-            <!-- Product Description -->
             <div class="product-description">
               <h4 class="product-price">$39.90</h4>
               <p>Jeans midi cocktail dress</p>
-              <!-- Add to Cart -->
               <a href="#" class="add-to-cart-btn">ADD TO CART</a>
             </div>
           </div>
 
-          <!-- Single gallery Item -->
           <div class="single_gallery_item">
-            <!-- Product Image -->
             <div class="product-img">
               <img src="../assets/images/product-img/product-3.jpg" alt="">
               <div class="product-quicview">
@@ -300,18 +290,14 @@
                 </a>
               </div>
             </div>
-            <!-- Product Description -->
             <div class="product-description">
               <h4 class="product-price">$39.90</h4>
               <p>Jeans midi cocktail dress</p>
-              <!-- Add to Cart -->
               <a href="#" class="add-to-cart-btn">ADD TO CART</a>
             </div>
           </div>
 
-          <!-- Single gallery Item -->
           <div class="single_gallery_item">
-            <!-- Product Image -->
             <div class="product-img">
               <img src="../assets/images/product-img/product-4.jpg" alt="">
               <div class="product-quicview">
@@ -320,18 +306,14 @@
                 </a>
               </div>
             </div>
-            <!-- Product Description -->
             <div class="product-description">
               <h4 class="product-price">$39.90</h4>
               <p>Jeans midi cocktail dress</p>
-              <!-- Add to Cart -->
               <a href="#" class="add-to-cart-btn">ADD TO CART</a>
             </div>
           </div>
 
-          <!-- Single gallery Item -->
           <div class="single_gallery_item">
-            <!-- Product Image -->
             <div class="product-img">
               <img src="../assets/images/product-img/product-5.jpg" alt="">
               <div class="product-quicview">
@@ -340,11 +322,9 @@
                 </a>
               </div>
             </div>
-            <!-- Product Description -->
             <div class="product-description">
               <h4 class="product-price">$39.90</h4>
               <p>Jeans midi cocktail dress</p>
-              <!-- Add to Cart -->
               <a href="#" class="add-to-cart-btn">ADD TO CART</a>
             </div>
           </div>
@@ -352,4 +332,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
