update services san pham

--- a/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
+++ b/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
@@ -11,7 +11,7 @@
             <div class="card-block">
               <button id="addRow" class="btn btn-primary mb-2">
                 <i class="ft-plus"></i>&nbsp; Thêm mới</button>
-              <table class="table table-striped table-bordered add-rows">
+              <table id="table_kh" class="table table-striped table-bordered add-rows">
                 <thead>
                   <tr>
                     <th>No.ID</th>
@@ -48,5 +48,5 @@
   </section>
   <!--/ Add rows table -->
   <!--/ Search API (regular expressions) table -->
-
 </div>
+
