--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -14,79 +14,27 @@
                   </div>
                   <div class="card-body">
                       <div class="card-block">
-                          <table class="table table-responsive-md-md text-center">
+                          <table id="table_sp" class="table table-responsive-md-md text-center">
                               <thead>
                                   <tr>
                                       <!-- <th></th> -->
                                       <th>No.ID</th>
-                                      <th>Tên SP</th>
-                                      <th>Loại</th>
-                                      <th>Chi tiết</th>
-                                      <th>Giá</th>
+                                      <th>Name</th>
+                                      <th>Type</th>
+                                      <th>Image</th>
+                                      <th>Size</th>
                                       <th>Actions</th>
                                   </tr>
                               </thead>
                               <tbody>
-                                  <tr>
-                                      <!-- <td>
-                                          <div class="custom-control custom-checkbox m-0">
-                                              <input type="checkbox" class="custom-control-input" id="item1">
-                                              <label class="custom-control-label" for="item1"></label>
-                                          </div>
-                                      </td> -->
-                                      <td>1</td>
-                                      <td>JNike Epic React Flyknit </td>
-                                      <td>Nike</td>
-                                      <td>The Nike Epic React Flyknit iD Running Shoe</td>
-                                      <td>500đ</td>
+                                  <tr *ngFor= "let sp of list_sp">
+                                      <td>{{sp.id}}</td>
+                                      <td>{{sp.tenSanPham}}</td>
+                                      <td>{{sp.loaiGiay.tenLoai}}</td>
+                                      <td>{{sp.hinhSanPham.hinh}}</td>
                                       <td>
-                                          <a class="info p-0" data-original-title="" title="">
-                                              <i class="ft-user font-medium-3 mr-2"></i>
-                                          </a>
-                                          <a class="success p-0" data-original-title="" title="">
-                                              <i class="ft-edit-2 font-medium-3 mr-2"></i>
-                                          </a>
-                                          <a class="danger p-0" data-original-title="" title="">
-                                              <i class="ft-x font-medium-3 mr-2"></i>
-                                          </a>
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <!-- <td>
-                                          <div class="custom-control custom-checkbox m-0">
-                                              <input type="checkbox" class="custom-control-input" id="item2">
-                                              <label class="custom-control-label" for="item2"></label>
-                                          </div>
-                                      </td> -->
-                                      <td>2</td>
-                                      <td>Giày Nike Zoom</td>
-                                      <td>NIKE</td>
-                                      <td>GIÀY NIKE ZOOM WINFLO 4</td>
-                                      <td>2.090.000 ₫</td>
-                                      <td>
-                                          <a class="info p-0" data-original-title="" title="">
-                                              <i class="ft-user font-medium-3 mr-2"></i>
-                                          </a>
-                                          <a class="success p-0" data-original-title="" title="">
-                                              <i class="ft-edit-2 font-medium-3 mr-2"></i>
-                                          </a>
-                                          <a class="danger p-0" data-original-title="" title="">
-                                              <i class="ft-x font-medium-3 mr-2"></i>
-                                          </a>
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <!-- <td>
-                                          <div class="custom-control custom-checkbox m-0">
-                                              <input type="checkbox" class="custom-control-input" id="item3">
-                                              <label class="custom-control-label" for="item3"></label>
-                                          </div>
-                                      </td> -->
-                                      <td>3</td>
-                                      <td>Adidas Solys</td>
-                                      <td>Adidas</td>
-                                      <td>Giày thể thao Adidas Solyx chính hãng</td>
-                                      <td>2.690.000 ₫</td>
+                                          <span *ngFor="let size of sp.kichThuoc">{{size.tenKichThuoc}}<span>  </span></span>
+                                          </td>
                                       <td>
                                           <a class="info p-0" data-original-title="" title="">
                                               <i class="ft-user font-medium-3 mr-2"></i>
@@ -123,7 +71,7 @@
                                   <tr>
                                       <th>Image</th>
                                       <th>Product</th>
-                                      <th>Weight</th>
+                                      <th>Size</th>
                                       <th>Price</th>
                                       <th>Quantity</th>
                                       <th>Amount</th>
@@ -131,14 +79,14 @@
                                   </tr>
                               </thead>
                               <tbody>
-                                  <tr>
+                                  <tr *ngFor= "let sp of list_sp">
                                       <td>
                                           <img class="media-object round-media" src="../assets/app-assets/img/elements/01.png" alt="Generic placeholder image" style="height: 75px;"
                                           />
                                       </td>
-                                      <td>Product 1</td>
-                                      <td>38.9 Ounce</td>
-                                      <td>$9.97</td>
+                                      <td>{{sp.tenSanPham}}</td>
+                                      <td>{{sp.kichThuoc.tenKichThuoc}}</td>
+                                      <td>{{sp.hangTrongKho.dongia}}</td>
                                       <td>
                                           2
                                           <div class="btn-group ml-1">
