--- a/karl-shop/src/app/components/product-detail/product-detail.component.html
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.html
@@ -5,15 +5,11 @@
       <div class="col-12">
         <ol class="breadcrumb d-flex align-items-center">
           <li class="breadcrumb-item">
-            <a href="#">Trang Chủ</a>
+            <a routerLink="/home">Trang Chủ</a>
           </li>
-          <li class="breadcrumb-item">
-            <a href="#">Giày Running</a>
-          </li>
-          <li class="breadcrumb-item active">Adidas</li>
+          <li class="breadcrumb-item active">{{_detailProduct.tenSanPham}}</li>
         </ol>
-        <!-- btn -->
-        <a href="#" class="backToHome d-block">
+        <a class="backToHome d-block">
           <i class="fa fa-angle-double-left"></i> Quay lại</a>
       </div>
     </div>
@@ -116,10 +112,7 @@
               </div>
               <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quis in veritatis officia inventore,
-                    tempore provident dignissimos nemo, nulla quaerat. Quibusdam non, eos, voluptatem reprehenderit hic nam!
-                    Laboriosam, sapiente! Praesentium.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia magnam laborum eaque.</p>
+                  <p>Giỏ hàng của bạn đang trống</p>
                 </div>
               </div>
             </div>
@@ -131,11 +124,9 @@
               </div>
               <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
                 <div class="card-body">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quo sint repudiandae suscipit ab soluta
-                    delectus voluptate, vero vitae, tempore maxime rerum iste dolorem mollitia perferendis distinctio. Quibusdam
-                    laboriosam rerum distinctio. Repudiandae fugit odit, sequi id!</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae qui maxime consequatur laudantium temporibus
-                    ad et. A optio inventore deleniti ipsa.</p>
+                  <p>Free ship trong phạm vi bán kính 10km</p>
+                  <p>Free 3 lần dịch vụ chăm sóc, bảo dưỡng giày</p>
+                  <p>Bảo hành 1 đổi 1 trong tháng đầu tiên sử dụng</p>
                 </div>
               </div>
             </div>
