--- a/karl-shop/src/app/components/header/header.component.html
+++ b/karl-shop/src/app/components/header/header.component.html
@@ -8,9 +8,7 @@
       <div class="menu-list">
         <h6>Categories</h6>
         <ul id="menu-content" class="menu-content collapse out">
-          <li class="home-menu"> <span class="icons"><i class="fa fa-chevron-right"></i></span> Giày Traning</li>
-          <li class="home-menu"><span class="icons"><i class="fa fa-chevron-right"></i></span>Giày Runninng</li>
-          <li class="home-menu"><span class="icons"><i class="fa fa-chevron-right"></i></span>Giày Hiking</li>
+          <li class="home-menu" (click)="getProductByCate(loai.tenLoai)" *ngFor="let loai of _loaigiayArray"> <span class="icons"><i class="fa fa-chevron-right"></i></span> {{loai.tenLoai}}</li>
         </ul>
       </div>
     </div>
