--- a/karl-shop/src/app/components/home/home.component.html
+++ b/karl-shop/src/app/components/home/home.component.html
@@ -174,7 +174,7 @@
     <div class="text-center portfolio-menu">
       <button class="btn active" data-filter="*">Tất Cả</button>
       <span class="" *ngFor="let loaigiay of _loaiGiayArray">
-        <button class="btn" data-filter="">{{loaigiay.tenLoai}}</button>
+        <button class="btn" data-filter="" (click)="getProductByCate(loaigiay.tenLoai)">{{loaigiay.tenLoai}}</button>
       </span>
     </div>
   </div>
