--- a/karl-shop/src/app/components/product-content/products/products.component.html
+++ b/karl-shop/src/app/components/product-content/products/products.component.html
@@ -1,8 +1,6 @@
-
-
 <div class="shop_grid_product_area">
   <div class="row">
-    <div *ngFor="let pro of _productArray" class="col-12 col-sm-6 col-lg-4 single_gallery_item wow fadeInUpBig" data-wow-delay="0.2s">
+    <div *ngFor="let pro of _productArray | paginate: { itemsPerPage: 9, currentPage: p }" class="col-12 col-sm-6 col-lg-4 single_gallery_item wow fadeInUpBig" data-wow-delay="0.2s">
       <div class="product-img" (click)="getDetailModal(pro)">
         <img src="{{pro.hinhSanPham[0].hinh}}" alt="">
         <div class="product-quicview">
@@ -23,15 +21,12 @@
 <div class="shop_pagination_area wow fadeInUp" data-wow-delay="1.1s">
   <nav aria-label="Page navigation">
     <ul class="pagination pagination-sm">
-      <li class="page-item active">
-        <a class="page-link" href="#">01</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">02</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">03</a>
-      </li>
+
+      <!-- <li class="page-item" id="paging">
+        <a class="page-link">1</a>
+      </li> -->
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+
     </ul>
   </nav>
 </div>
