--- a/karl-shop/src/app/components/header/header.component.html
+++ b/karl-shop/src/app/components/header/header.component.html
@@ -130,13 +130,13 @@
                     <a class="nav-link" routerLink="/home">Trang Chủ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" routerLink="/products">Sản Phẩm</a>
+                    <a class="nav-link" routerLink="/home/products">Sản Phẩm</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" routerLink="/cart">Giỏ Hàng</a>
+                    <a class="nav-link" routerLink="/home/cart">Giỏ Hàng</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" routerLink="/checkout">Thanh Toán</a>
+                    <a class="nav-link" routerLink="/home/checkout">Thanh Toán</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link">Chi Tiết</a>
@@ -144,6 +144,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Liên Hệ</a>
                   </li>
+                  <li class="nav-item">
+                      <a class="nav-link" routerLink="/home/account">Tài khoản</a>
+                    </li>
                   <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="karlDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                       aria-expanded="false">Pages</a>
