Upload giao diện admin - user - profile

--- a/karl-shop/src/app/components/header/header.component.html
+++ b/karl-shop/src/app/components/header/header.component.html
@@ -101,16 +101,16 @@
           <div class="header-social-area">
             <a href="#">
               <span class="karl-level">New</span>
-              <i class="fa fa-pinterest" aria-hidden="true"></i>
+              <i class="fab fa-pinterest-p" aria-hidden="true"></i>
             </a>
             <a href="#">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
+              <i class="fab fa-facebook-f" aria-hidden="true"></i>
             </a>
             <a href="#">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <i class="fab fa-twitter" aria-hidden="true"></i>
             </a>
             <a href="#">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
+              <i class="fab fa-linkedin-in" aria-hidden="true"></i>
             </a>
           </div>
           <!-- Menu Area -->
