--- a/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
+++ b/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
@@ -1,3 +1,57 @@
-<p>
-  user-profile works!
-</p>
+<mat-tab-group>
+
+  <mat-tab label="Thông tin tài khoản" class="mattab">
+    <div class="example-container">
+
+      <div class="name">
+        <label class="lblName">Họ tên</label>
+        <mat-form-field>
+          <input matInput placeholder="Nguyễn Văn A">
+        </mat-form-field>
+      </div>
+
+      <div class="hotline">
+        <label class="lblName">Số điện thoại</label>
+        <mat-form-field>
+          <input matInput placeholder="098 9874 123">
+        </mat-form-field>
+      </div>
+
+      <div class="address">
+        <label class="lblName">Địa chỉ</label>
+        <mat-form-field>
+          <input matInput placeholder="111 Nguyễn Du, Q.1, HCM.">
+        </mat-form-field>
+      </div>
+
+      <div class="email">
+        <label class="lblName">Email</label>
+        <mat-form-field>
+          <input matInput placeholder="user1@gmail.com">
+        </mat-form-field>
+      </div>
+
+      <div class="gender">
+        <label class="lblName">Giới tính</label>
+        <mat-radio-group class="example-radio-group" [(ngModel)]="favoriteSeason">
+          <mat-radio-button class="example-radio-button" *ngFor="let season of seasons" [value]="season">
+            {{season}}
+          </mat-radio-button>
+        </mat-radio-group>
+      </div>
+
+      <div class="button-row">
+        <button mat-raised-button color="primary" class="btnLogin">Cập nhật</button>
+      </div>
+
+    </div>
+
+  </mat-tab>
+
+
+  <mat-tab label="Lịch sử thanh toán">
+    
+    <h1 style="color: red;">Lịch sử thanh toán của bạn đang trống</h1>
+
+  </mat-tab>
+</mat-tab-group>
